// Copyright (c) Quinntyne Brown. All Rights Reserved.
// Licensed under the MIT License. See License.txt in the project root for license information.

namespace CodeGenerator.DotNet.Artifacts.FullStack;

public interface IFullStackFactory
{
    Task<FullStackModel> CreateAsync(FullStackCreateOptions options);
}